[package]
name = "azure-kusto-data"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Data Explorer"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_kusto_data"
keywords = ["sdk", "azure", "kusto", "azure-data-explorer"]
categories = ["api-bindings"]

[dependencies]
arrow = { version = "28.0.0", optional = true }
azure_core = { version = "0.7.0", features = [
    "enable_reqwest",
    "enable_reqwest_gzip",
] }
azure_identity = { version = "0.8.0" }
async-trait = "0.1.59"
async-convert = "1.0.0"
bytes = "1.3.0"
futures = "0.3.25"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
serde_with = { version = "2.1.0", features = ["json"] }
thiserror = "1.0.37"
hashbrown = "0.13.1"
regex = "1.7.0"
time = { version = "0.3.17", features = [
    "serde",
    "parsing",
    "formatting",
    "macros",
    "serde-well-known",
] }
derive_builder = "0.12"
once_cell = "1.16.0"

[dev-dependencies]
arrow = { version = "28.0.0", features = ["prettyprint"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.22.0", features = ["macros"] }
oauth2 = "4.3.0"
criterion = "0.4.0"
clap = { version = "4", features = ["derive", "env"] }
decimal = "2.0.0"
uuid = { version = "1.2.2", features = [ "serde"] }

[features]
default = ["arrow"]
test_e2e = []

[[bench]]
name = "connection_string"
harness = false
