[package]
name = "azure-kusto-data"
version = "0.1.0"
description = "Rust wrappers around Microsoft Azure REST APIs - Azure Data Explorer"
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/azure/azure-sdk-for-rust"
homepage = "https://github.com/azure/azure-sdk-for-rust"
documentation = "https://docs.rs/azure_kusto_data"
keywords = ["sdk", "azure", "kusto", "azure-data-explorer"]
categories = ["api-bindings"]

[dependencies]
arrow-array = { version = "42", optional = true }
arrow-schema = { version = "42", optional = true }
azure_core = { version = "0.13", features = [
    "enable_reqwest",
    "enable_reqwest_gzip",
] }
azure_identity = "0.13.0"
async-trait = "0.1.64"
async-convert = "1.0.0"
bytes = "1.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["json"] }
thiserror = "1.0.38"
hashbrown = { version = "0.14", features = ["serde"] }
regex = "1.7.1"
time = { version = "0.3", features = [
    "serde",
    "parsing",
    "formatting",
    "macros",
    "serde-well-known",
] }
derive_builder = "0.12"
once_cell = "1"

[dev-dependencies]
arrow = { version = "42", features = ["prettyprint"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.25.0", features = ["macros"] }
oauth2 = "4.3.0"
criterion = "0.5"
clap = { version = "4.1.6", features = ["derive", "env"] }
decimal = "2.1.0"
uuid = { version = "1.3.0", features = ["serde"] }

[features]
default = ["arrow"]
arrow = ["arrow-array", "arrow-schema"]
test_e2e = []

[[bench]]
name = "connection_string"
harness = false
