[package]
name = "azure-kusto-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure-kusto-data = {path = "../azure-kusto-data"}
# Azure SDK for Rust crates versions must be kept in sync
azure_core = "0.16"
azure_storage = "0.16"
azure_storage_blobs = "0.16"
azure_storage_queues = "0.16"

anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
url = "2"
uuid = {version = "1", features = ["v4", "serde"]}
